[package]
authors = ["Nathaniel Ringo <remexre@gmail.com>"]
name = "monto-example-services"
version = "0.1.0"

[dependencies]
aho-corasick = "0.6.3"
either = "1.1.0"
log = "0.3.8"
monto = "0.1.12"
pretty_logger = "0.1.7"
serde_json = "1.0.2"
tokio-core = "0.1.9"
unicode-segmentation = "1.2.0"
void = "1.0.2"
